--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,3 @@
-The desktop-first pre-defined media queries
-/* 2xl */
-@media (max-width: 1536px) {}
-
-/* xl */
-@media (max-width: 1280px) {}
-
-/* lg */
-@media (max-width: 1024px) {}
-
-/* md */
-@media (max-width: 768px) {}
-
-/* sm */
-@media (max-width: 640px) {}
-
-/* xs */
-@media (max-width: 475px) {}
-
 Mobile container utility class
 .container {
   width: 100%;
@@ -112,11 +93,9 @@ footer {
 }
 
 .my-image-grab{
-  border: 2px solid;
-  padding: 25px;
   height: auto;
-  width: 600px;
-  float: right;
+  width: 800px;
+  float: left;
 }
 
 * {
